# C-

./: CMakeLists.txt  README.Md
exercise/exercise_1_hello_world/: hello_world  hello_world.cpp
exercise/exercise_2-variables/: preco  variables3  variables3.cpp
exercise/exercise_3_control/: a.out  break.cpp  for.cpp  while.cpp
exercise/exercise_4_function/: function.cpp  function2.cpp  game.cpp  pointer.cpp  structs.cpp
extra/: class.cpp
